# ChangeLog for dev-util/pkgconfig
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/pkgconfig/ChangeLog,v 1.92 2010/10/14 19:25:45 ranger Exp $

  14 Oct 2010; Brent Baude <ranger@gentoo.org> pkgconfig-0.25-r2.ebuild:
  stable ppc, bug 331345

  19 Sep 2010; Raúl Porcel <armin76@gentoo.org> pkgconfig-0.25-r2.ebuild:
  ia64/m68k/s390/sh/sparc stable wrt #331345

  19 Sep 2010; Tobias Klausmann <klausman@gentoo.org>
  pkgconfig-0.25-r2.ebuild:
  Stable on alpha, bug #331345, thanks to mattst88 for testing

  03 Sep 2010; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Move maintainership to freedesktop as talked with them.

  23 Aug 2010; Markus Meier <maekke@gentoo.org> pkgconfig-0.25-r2.ebuild:
  arm stable, bug #331345

  20 Aug 2010; Samuli Suominen <ssuominen@gentoo.org>
  pkgconfig-0.25-r2.ebuild:
  ppc64 stable wrt #331345

  10 Aug 2010; Jeroen Roovers <jer@gentoo.org> pkgconfig-0.25-r2.ebuild:
  Stable for HPPA (bug #331345).

  07 Aug 2010; Markos Chandras <hwoarang@gentoo.org>
  pkgconfig-0.25-r2.ebuild:
  Stable on amd64 wrt bug #331345

  06 Aug 2010; Christian Faulhammer <fauli@gentoo.org>
  pkgconfig-0.25-r2.ebuild:
  stable x86, bug 331345

*pkgconfig-0.25-r2 (11 Jul 2010)

  11 Jul 2010; Samuli Suominen <ssuominen@gentoo.org>
  +pkgconfig-0.25-r2.ebuild, +files/pkgconfig-0.25-dnl.patch:
  Fix for sys-devel/autoconf >= 2.66 compability wrt #326939.

*pkgconfig-0.25-r1 (17 Jun 2010)

  17 Jun 2010; Samuli Suominen <ssuominen@gentoo.org>
  +pkgconfig-0.25-r1.ebuild:
  Use system copy of dev-libs/popt.

*pkgconfig-0.25 (17 Jun 2010)

  17 Jun 2010; Samuli Suominen <ssuominen@gentoo.org>
  +pkgconfig-0.25.ebuild:
  Version bump wrt #321575 by Andrey Hippo.

  11 May 2009; Mart Raudsepp <leio@gentoo.org> -pkgconfig-0.17.2-r1.ebuild,
  -pkgconfig-0.20.ebuild:
  Remove some very old redundant versions

  30 Jul 2008; Brent Baude <ranger@gentoo.org> pkgconfig-0.23.ebuild: