@@ -1,5 +1,17 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX pkgconfig-0.25-dnl.patch 379 RMD160 51440ba744e72eca6cc5dddbc2deca255c876457 SHA1 07a82828607d18b17f8727dab43ea93048577f8d SHA256 dbcf523e428b7513d3fe894a5366abd93d2b05a93e1614bf2d87734839fa48e6
 DIST pkg-config-0.25.tar.gz 988899 RMD160 835509d01f68c45823ee89c718776eb66f61316b SHA1 8922aeb4edeff7ed554cc1969cbb4ad5a4e6b26e SHA256 3ba691ee2431f32ccb8efa131e59bf23e37f122dc66791309023ca6dcefcd10e
+DIST pkg-config-0.26.tar.gz 396399 RMD160 face3d16ec338b9b1ab41d56d6e4d1a5624b52d0 SHA1 fd71a70b023b9087c8a7bb76a0dc135a61059652 SHA256 94c1936a797c930fb3e4e5a154165b6268caba22b32d24083dd4c492a533c8af
 EBUILD pkgconfig-0.25-r2.ebuild 1175 RMD160 2afd60809a558866c97b9f387668dcbc2327b664 SHA1 faa1b55813b7fc574ef89c5e7e7f64a7fc21ddc3 SHA256 62219060e18d95f27a17aae4cabe1ecc90fb187c5c63525f189aff2b313b36e0
-MISC ChangeLog 11108 RMD160 fb243ec5e540bd1256793f26bff0938bcaaf11f7 SHA1 73f1600cce273f56eca207b7661aeef4692ffc77 SHA256 f865e8c5b9aefcd5232881a730824a375db125402017a2fd623b1375ca70b014
+EBUILD pkgconfig-0.26.ebuild 1285 RMD160 5be654384aa7324817c89615574d9e04905a694c SHA1 b66b7e5fde1974e491ff39ca957fe469b192b208 SHA256 1040d71f73be85292dffcaa90b66c9f91d9da7ed7a36740e4c86a7f1d12eee12
+MISC ChangeLog 11237 RMD160 ef0558f62f0d1cc0856e811db5f9510117c4b461 SHA1 64e1f08ebdd8c2dceffb16ebd2521a393fb74416 SHA256 0653cd0571d9eea4624a22d106b85e33c8b776920f4a99048261e3444085fb48
 MISC metadata.xml 235 RMD160 2b622eaee2f1b2f24614266e8e78bfb92a73b7bd SHA1 e0b0a496d62ad809efd1eb23df0a12e30e5598f0 SHA256 90059f50c905d3fedb940d40badfa498daf5ea7af7f9586df10cd00c59c71678
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iF4EAREIAAYFAk3WGFYACgkQXkR9YqOcLPGl6gD/Z4GkvSk80nLkPuEPN/3TmKL8
+ybEwhVwxyOm+/2cTm/0A/1tDiQp6kfqZJ5y4CPozdimpUS4991SXHe7Owd1af07K
+=P9/M
+-----END PGP SIGNATURE-----
